# pete

./: .env  README.md  package-lock.json  requirements.txt
backend/: .gitignore
backend/dev/arize/: arize.ipynb
backend/dev/temporal/: .gitignore  README.md  SUPABASE_INFO.md  check_env.py  concatenate_audio.py  list_audio_files.py  pyproject.toml  requirements.txt  run_workflow.py  test_supabase.py  worker.py  workflows.py
backend/dev/temporal/activities/: __init__.py  audio_activities.py  greeting_activities.py  llm_activities.py  scrape_activities.py
backend/dev/temporal/utils/: __init__.py  audio_utils.py
frontend/: TEMPORAL_SETUP.md  next.config.ts  package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/api/audio/: route.ts
frontend/app/api/scrape/: route.ts
frontend/app/api/scrape-url/: route.ts
frontend/app/api/script/: route.ts
frontend/app/api/translate/: route.ts
frontend/app/api/upload/: route.ts
frontend/app/api/upload-pdf/: config.ts  gemini.ts  route.ts
frontend/app/api/workflow-status/: route.ts
frontend/app/course/[id]/: CourseInterface.tsx  page.tsx
frontend/app/upload/: page.tsx
frontend/components/: AudioPlayer.tsx  PdfUploadForm.tsx  ScrapePage.tsx  Transcripts.tsx  WebScraperForm.tsx
frontend/lib/: schema.ts
frontend/lib/s3/: s3.ts
