[project]
name = "temporal-worker"
version = "0.1.0"
description = "Basic Temporal worker using Python"
requires-python = ">=3.9"
dependencies = [
    "temporalio>=1.4.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "apify>=2.0.0",
    "bs4>=0.0.2",
    "google-generativeai>=0.8.5",
    "rime>=2.2.1",
    "pydub>=0.25.1",
    "supabase>=1.0.3",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
]
